--- a/public/assets/css/layout-medium.css
+++ b/public/assets/css/layout-medium.css
@@ -249,6 +249,9 @@
   .header.header-fixed .icon-glyphlogo-new {
     display: none;
   }
+  .header.header-fixed .social-icons {
+    display: none;
+  }
   .header > header {
     margin: 0 auto;
     width: 95%;
@@ -346,15 +349,19 @@
     position: relative;
   }
   .header .social-icons a {
+    width: 100%;
+    height: 100%;
     position: absolute;
-    top: -0.5em;
-    left: 0;
-    font-size: 1.25em;
-    color: #fff !important;
+    top: 0;
+    text-align: center;
   }
   .header .social-icons a i {
-    width: 1em;
-    height: 1em;
+    position: absolute;
+    width: 70%;
+    height: 75%;
+    top: 50%;
+    -webkit-transform: translateY(-50%) translateX(-50%);
+    left: 50%;
   }
   .header .elevated-item li {
     background: transparent;
@@ -583,6 +590,9 @@
   }
   #installs .contact-wrapper {
     display: none;
+  }
+  .app-page .header > header {
+    width: 100%;
   }
   .app-page .page-heading {
     font-size: 2.25em;
