--- a/stylus/assets/css/layout-large.styl
+++ b/stylus/assets/css/layout-large.styl
@@ -72,6 +72,9 @@
   /*
    * App Page Overrides
    */
+  .header > header
+    width 95%
+
   .question
     width 30%
 
@@ -245,6 +248,10 @@
 
       p.password-group
         @extends .float-l
+
+  .app-page
+    .header > header
+      width 95%
 
 @media $mq_larger
   .page-content-inner-wrapper
