--- a/stylus/assets/css/pages/index.styl
+++ b/stylus/assets/css/pages/index.styl
@@ -85,17 +85,17 @@
 			text-indent 100%
 		
 		a, i
-			font-size 1.1em
+			// font-size 1.1em
 
 		i
-			position absolute
-			top: 0.65em;
-			left: 0.225em;
+			// position absolute
+			// top: 0.65em;
+			// left: 0.225em;
 
 		i.icon-__51_facebook_white
-			font-size: 1.3em;
-			top: .5em;
-			left: .125em;
+			// font-size: 1.3em;
+			// top: .5em;
+			// left: .125em;
 
 
 
